<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/questionnaire_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/title_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/questionnaire_title"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/questionnaire_score"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/light_orange"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_row"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/questionnaire_status_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/questionnaire_not_completed"
                    android:textColor="@color/cyan"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>