<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_group_raq"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:orientation="vertical">
</RadioGroup>